k8s/manifests-f2d6f1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-f2d6f1
  namespace: journee
  labels:
    app: journee-f2d6f1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-f2d6f1
  template:
    metadata:
      labels:
        app: journee-f2d6f1
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-f2d6f1
          image: gcr.io/my-docker-471807/journee:v7.1.0
          ports:
            - containerPort: 3000
