k8s/manifests-f2d6f1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-f2d6f1
  namespace: journee
spec:
  selector:
    app: journee-f2d6f1
  ports:
    - port: 80
      targetPort: 3000
